# tets2vox

./: Cargo.toml  README.md
src/: main.rs  progress_bar.rs  voxio.rs
tests/: cube.msh2  mesh.msh  test.ps1  voxels.msh  voxels.txt
