[package]
name = "tets2vox"
version = "1.0.0"
authors = ["Antonino Vacalebre <vacalebre.antonino@spes.uniud.it>"]
description = "Converts tetrahedral meshes to voxel meshes (gmsh 2.2 format)"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
ndarray = "0.15.6"
