[package]
name = "tets2vox"
version = "1.2.3"
authors = ["Antonino Vacalebre <vacalebre.antonino@spes.uniud.it>"]
description = "Converts tetrahedral meshes (MSH 2.2) to voxel meshes (MSH 2.2, VoxHenry)."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
ndarray = "0.15.6"
